tests/rosetta/out/Rust/chaos-game.error
rustc error: exit status 1
error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
 --> /tmp/TestMochiRustGoldenchaos-game1338494742/001/prog.rs:9:25
  |
9 |     let height = (width.parse::<f64>().unwrap() * 0.86602540378).parse::<i32>().unwrap();
  |                         ^^^^^
  |
help: you must specify a type for this binding, like `i32`
  |
8 |     let width: i32 = 60;
  |              +++++

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiRustGoldenchaos-game1338494742/001/prog.rs:28:125
   |
28 | ...1, height - 1], vec![((width as f64) / (2 as f64)).parse::<i32>().unwrap(), 0]];
   |                                                       ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiRustGoldenchaos-game1338494742/001/prog.rs:29:48
   |
29 |     let mut px = ((width as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/TestMochiRustGoldenchaos-game1338494742/001/prog.rs:35:24
   |
35 |         let idx = r[1].parse::<i32>().unwrap();
   |                        ^^^^^ method not found in `i32`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldenchaos-game1338494742/001/prog.rs:49:13
   |
49 |             line += grid[y as usize][x as usize];
   |             ----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0368, E0599, E0689.
For more information about an error, try `rustc --explain E0368`.
